# eztobiz_multi_agents

./: README.md  env.example  langgraph.json  pyproject.toml
src/agent/: __init__.py  config.py  dual_agent_system.py  graph.py  math_agent.py  question_agent.py  run_dual_agents.py
tests/integration_tests/: test_graph.py
tests/unit_tests/: test_configuration.py
