[tool.poetry]
package-mode = false

[project]
name = "multi-agents"
version = "0.1.0"
description = ""
authors = [
    {name = "zinnia-agsn",email = "zinnia@agsn.ai"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph (>=0.6.4,<0.7.0)",
    "langchain-core (>=0.3.74,<0.4.0)",
    "langchain-openai (>=0.3.29,<0.4.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "black (>=25.1.0,<26.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langgraph-cli[inmem] (>=0.3.8,<0.4.0)",
]
[tool.poetry.group.dev.dependencies]
langgraph-cli = "^0.3.8"

